src/objects/VPM_PurchasingRequests__c.object
<CustomObject>
    <fields>
        <fullName>VPM_CRVT__c</fullName>
        <description>VPM - System field to store the text value of Country Requesting Vendor for use in the Finance Approval entry Criteria. API name shortened to deal with text limits in approval rule entry critiera.</description>
        <formula>TEXT(VPM_CountryRequestingVendor__c)</formula>
        <label>Country Requesting Vendor (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CSTno__c</fullName>
        <description>VPM - This field is used to store the CST No.</description>
        <label>CST No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CalculateTotalNoOfHours__c</fullName>
        <description>VPM- Formula to Calculate duration till which request is with each Approver group.</description>
        <formula>((VPM_NoOfDays__c-1)*24) 

+(VALUE(TEXT((VALUE(LEFT(MID ( TEXT (NOW()), 12, 5), FIND(&apos;:&apos;, MID ( TEXT (NOW()), 12, 5))-1)) 
+ 
VALUE( 
RIGHT(MID ( TEXT (NOW()), 12, 5), FIND(&apos;:&apos;, MID ( TEXT (NOW()), 12, 5))-1))/60) 
- 
(VALUE(LEFT(MID ( TEXT (VPM_RequestGroupTime__c), 12, 5), FIND(&apos;:&apos;, MID ( TEXT (VPM_RequestGroupTime__c), 12, 5))-1)) 
+ 
VALUE( 
RIGHT(MID ( TEXT (VPM_RequestGroupTime__c), 12, 5), FIND(&apos;:&apos;, MID ( TEXT (VPM_RequestGroupTime__c), 12, 5))-1))/60)) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculate Total No Of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_CarFreightGroup__c</fullName>
        <description>VPM - This field is used to store the value of Car Freight Group.</description>
        <label>Car Freight Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CashManagementGroup__c</fullName>
        <description>VPM - Specifies the Vendor&apos;s Cash Management Group.</description>
        <label>Cash Management Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Management Group 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2000_UL Cust_Group Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1000_Customer_Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1010_Risk Cust_Risk Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1000_Vendor RM_Vendors: RM &amp; Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1010_Vendor FG_Vendors: Finished Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1020_Vendor SE_Vendors: Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1030_Employees_Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1040_Taxes_Taxes &amp; social security due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V1050_Vendor AS_Vendors: Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V2000_UL vendors_Group vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A1_V-DOMESTIC_VENDOR-DOMESTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2_V-FOREIGN _VENDOR-FOREIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3_V-CONC DOM_VENDOR-CONCERN - DOMESTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4_V-CONC FOR_VENDOR-CONCERN - FOREIGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A5_V-INSTITUT_VENDOR-INSTITUTIONS (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A6_V-TAXES_VENDOR-TAXES (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A7_V-EMPLOYEE_VENDOR-EMPLOYEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A8_V-STAND OR_VENDOR-STANDING ORDER (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A9_V-OTHERS_VENDOR-OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA_L-SHORT TE_LOANS-SHORT TERM LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AB_L-LONG TER_LOANS-LONG TERM LOANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AD_DEPOSITS_LOANS-DEPOSITS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_V-OIL DOM _VENDOR-OIL (DOMESTIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_V-OIL IMP _VENDOR-OIL (IMPORT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_V-INTERCOM_VENDOR- INTERCOMP (Israel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK_V-TEA DOM_VENDOR-TEA (DOMESTIC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_V-TEA IMP_VENDOR-TEA (IMPORT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_V-MAR MEDI_VENDOR-MARKETING&amp;MEDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_V-TRANSPOR_VENDOR-TRANSPORTATION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CertificateWithholdingTaxExemption__c</fullName>
        <description>VPM - This field is used to store the Certificate.No.of the Withholding Tax Exemption.</description>
        <label>Cert.No.of the Withholding Tax Exemption</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CertificationDate__c</fullName>
        <description>VPM - This field is used to store the Certification Date of the certification.</description>
        <label>Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPM_ChangedBy__c</fullName>
        <description>VPM - This field is used to store the Name of the user who last changed the record.</description>
        <label>Changed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Changedon__c</fullName>
        <description>VPM - This field is used to store the date when the record was changed.</description>
        <label>Changed on</label>
        <picklist>
            <picklistValues>
                <fullName>12345</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>v</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CheckCompanyCodeDigit__c</fullName>
        <description>If company code value is 4 digit returns true other wise returns false</description>
        <formula>IF(LEN(VPM_Company_Code_Value__c) = 4 ,true,false)</formula>
        <label>Check Company Code Digit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_CheckDigit__c</fullName>
        <description>VPM - This field is used to store the value of Check Digit.</description>
        <label>Check Digit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CheckDoubleInvoices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPM - This field is used to store the value of Check Double Invoices checkbox field.</description>
        <label>Check Double Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_CheckForFieldUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - check if the field is updated from its previous value. Used in trigger.</description>
        <label>VPM_CheckForFieldUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_CheckHours__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPM- used in report to calculate no of hours difference.</description>
        <label>CheckHours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_ChkCashing__c</fullName>
        <description>VPM - This field is used to store the value of Chk Cashing.</description>
        <label>Chk Cashing</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CityInt__c</fullName>
        <description>VPM - International version of the City, i.e. non-latin character set entry.</description>
        <label>City [Int]</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_City__c</fullName>
        <description>VPM - Stores the City value as completed by the Business Requestor or FLS. Interfaces with SAP.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ClerkAtVendor__c</fullName>
        <description>VPM - This field is used to store the value of Clerk at Vendor.</description>
        <label>Clerk at Vendor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ClerksFax__c</fullName>
        <description>VPM - This field is used to store the value of Clerks Fax.</description>
        <label>Clerks Fax</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ClerksInternet__c</fullName>
        <description>VPM - This field is used to store the value of Clerks Internet (Remittance Email addr).</description>
        <label>Clerks Internet (Remittance Email addr)</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ClicktoolsSourceCountry__c</fullName>
        <description>VPM - This field is used to store the value of Clicktools Source Country.</description>
        <label>Clicktools Source Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CollectionAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Collection Authorization.</description>
        <label>Collection Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_Comments__c</fullName>
        <description>VPM - Used by the Business Requestor to record any comments that may be helpful to other users as they qualify the Vendor / Ariba requirements during their assessment. No interface with SAP.</description>
        <inlineHelpText>Please enter any additional information that will help to process your request.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VPM_Commissionerate__c</fullName>
        <description>VPM - This field is used to store the value of Commissionerate.</description>
        <label>Commissionerate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CommodityClassCode__c</fullName>
        <description>VPM - This field is used to store the value of Commodity Class Code.</description>
        <formula>LEFT(VPM_Commodity__r.VPM_CommodityCode__c , 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commodity Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Commodity_Family__c</fullName>
        <description>VPM - Field to be used in Approval process.</description>
        <formula>TEXT( VPM_Commodity__r.VPM_CommodityFamily__c )</formula>
        <label>Commodity Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Commodity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPM - Look up to Commodity code object. Used later for Golden Data and Procurement approval routing.</description>
        <inlineHelpText>Enter Commodity Code if known or select &apos;Lookup&apos; icon for Advanced Search. For non-Ariba enter 0000 for non-Ariba Commodity.</inlineHelpText>
        <label>Commodity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VPM_CommodityCode__c.VPM_CommodityRegionUnique__c</field>
                <operation>contains</operation>
                <valueField>$Source.VPM_ECC__c</valueField>
            </filterItems>
            <infoMessage>Click &apos;All Fields&apos;.
Enter Commodity Code or part of the name with a wildcard, e.g. &quot;*Research&quot; returns any Commodities with research in the name like &apos;Market Research&apos;.
For non-Ariba Commodity enter 0000 and select &apos;Non-Ariba Commodity&apos;</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VPM_CommodityCode__c</referenceTo>
        <relationshipLabel>Vendor Requests</relationshipLabel>
        <relationshipName>Vendor_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_CompanyCodeECC__c</fullName>
        <description>VPM - This formula field copies the ECC of company code to Vendor Request</description>
        <formula>TEXT(VPM_CompanyCode__r.ECC__c)</formula>
        <label>Company Code ECC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CompanyCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>VPM - Company code related to vendor request</description>
        <inlineHelpText>Enter the Company Code the Vendor is required in. Click on the &apos;Lookup&apos; icon for an Advanced Search.</inlineHelpText>
        <label>Company Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active Company code within your country.</errorMessage>
            <filterItems>
                <field>VPM_CompanyCode__c.VPM_Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.VPM_CountryRequestingVendor__c</valueField>
            </filterItems>
            <filterItems>
                <field>VPM_CompanyCode__c.VPM_IsInactive__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <infoMessage>Click &apos;All Fields&apos;,

Enter the Country to see a list of all available Company Codes, or search using the start of the Company Code and a wildcard, e.g. 20* returns all Company Codes in your Country starting with 20</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VPM_CompanyCode__c</referenceTo>
        <relationshipLabel>Vendor Requests</relationshipLabel>
        <relationshipName>Purchasing_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VPM_CompanyPostCode__c</fullName>
        <description>VPM - This field is used to store the value of Company Post Code.</description>
        <label>Company Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Company_Code_Value__c</fullName>
        <description>VPM - This field is used to store the value of Company Code Value.</description>
        <formula>VPM_CompanyCode__r.VPM_CompanyCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Code Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ConfirmationControl__c</fullName>
        <description>VPM - This field is used to store the value of Confirmation Control.</description>
        <label>Confirmation Control</label>
        <picklist>
            <controllingField>VPM_ECC__c</controllingField>
            <picklistValues>
                <fullName>0001_Confirmations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0002_Rough GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0003_Inb. deliv./rough GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0004_Inbound delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z001_Confirmations ICT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z002_Cross Dock Conf.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z004_STO Inbound delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZA01_Copack Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0005_Turkish Import Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0006_Order acknowledgment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0007_2 Step Import Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOTM_Inbound OTM delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOTR_IBD OTM Retrospect.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOTM_Inbound delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZULC_Inbound delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ContactPersonSurname__c</fullName>
        <description>VPM - This field is used to store the value of DELContact Person-Surname.</description>
        <label>DELContact Person-Surname</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CorporateGrp__c</fullName>
        <description>VPM - This field is used to store the value of Corporate Group.</description>
        <label>Corporate Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CorrespondentBank__c</fullName>
        <description>VPM - This field is used to store the value of Correspondent Bank.</description>
        <label>Correspondent Bank</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CountryInt__c</fullName>
        <description>VPM - Used within international version for a Country data. Not available as an international version as per rules in SAP.</description>
        <label>Country [Int]</label>
        <picklist>
            <picklistValues>
                <fullName>AD_Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_Utd.Arab Emir (UAE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG_Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO_Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ_Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN_Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS_Samoa, American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU_Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW_Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ_Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB_Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE_Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF_Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG_Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH_Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ_Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM_Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN_Brunei Dar-es-S (Brunei Daruss)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO_Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ_Bon+Statia+Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR_Brazil</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CountryRegionUpdate__c</fullName>
        <description>VPM -  checks for the update of the country region.</description>
        <label>VPM_CountryRegionUpdate</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CountryRequestingVendor__c</fullName>
        <description>VPM - the Country the user is raising the request on behalf of. Used for routing later in the approval process.</description>
        <inlineHelpText>Country of Unilever entity to be charged. E.g. - if French Company code is to be charged, select &apos;France&apos;.</inlineHelpText>
        <label>Country Requesting Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Djibouti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Rep.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egypt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Salvador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethiopia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Country__c</fullName>
        <description>VPM - Country that the Vendor resides in. Interfaced with SAP</description>
        <inlineHelpText>Country the Vendor is located in</inlineHelpText>
        <label>Vendor Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD_Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE_Utd.Arab Emir (UAE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF_Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG_Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI_Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL_Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM_Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN_Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO_Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ_Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR_Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS_Samoa, American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT_Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU_Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW_Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ_Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA_Bosnia-Herz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB_Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD_Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE_Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF_Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG_Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH_Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI_Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ_Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM_Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN_Brunei Dar-es-S (Brunei Daruss)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO_Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ_Bon+Statia+Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR_Brazil</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_CreatedDateFormulaField__c</fullName>
        <description>VPM -  formula to evaluate created date</description>
        <formula>MID(TEXT(CreatedDate),6,2)&amp;&quot;/&quot;&amp; MID(TEXT(CreatedDate),9,2)&amp;&quot;/&quot;&amp;LEFT( TEXT( CreatedDate),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VPM_CreatedDateFormulaField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CreditInfoNumber__c</fullName>
        <description>VPM - This field is used to store the Credit Info Number.</description>
        <label>Credit Info Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_CurrentUserIsAssignedProcApprover__c</fullName>
        <description>VPM - Checks whether the current user is present in one of the dynamic approver fields for Procurement. Used to filter down list views.</description>
        <formula>IF($User.Id=VPM_Approver1__r.Id, TRUE, 
IF($User.Id=VPM_Approver2__r.Id, TRUE,
IF($User.Id=VPM_Approver3__r.Id, TRUE,
IF($User.Id=VPM_Approver4__r.Id, TRUE,
IF($User.Id=VPM_Approver5__r.Id, TRUE,
IF($User.Id=VPM_Approver6__r.Id, TRUE,
IF($User.Id=VPM_Approver7__r.Id, TRUE,
IF($User.Id=VPM_Approver8__r.Id, TRUE,
IF($User.Id=VPM_Approver9__r.Id, TRUE,
IF($User.Id=VPM_Approver10__r.Id, TRUE,
FALSE))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Assigned Proc Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_Customer__c</fullName>
        <description>VPM - Specifies the Customer details associated with the Vendor.</description>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DMEIndicator__c</fullName>
        <description>VPM - This field is used to store the value of DME Indicator.</description>
        <label>DME Indicator</label>
        <picklist>
            <picklistValues>
                <fullName>1_Single data record not to be forwarded to the Bundesbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0_Single data record can be forwarded to the Bundesbank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>_Use house bank default value</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_DUNSHierarchyInvestigationReq__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of DUNS Hierarchy Investigation Required.</description>
        <label>DUNS Hierarchy Investigation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_DataLine__c</fullName>
        <description>VPM - This field is used to store the value of Data Line.</description>
        <label>Data Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DateOfBirth__c</fullName>
        <description>VPM - This field is used to store the Date of Birth.</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPM_DaysOpen__c</fullName>
        <description>VPM - Calculates the number of days a request has been open.</description>
        <formula>IF(OR(
TEXT(VPM_Status__c)=&quot;Request Completed&quot;, 
TEXT(VPM_Status__c)=&quot;FLS Rejected&quot;,
TEXT(VPM_Status__c)=&quot;Finance Rejected&quot;,
TEXT(VPM_Status__c)=&quot;Procurement Rejected&quot;,
TEXT(VPM_Status__c)=&quot;MDM Ops Review - SAP BPM Approval Rejected&quot;,
TEXT(VPM_Status__c)=&quot;Russian Custom Tax Rejected&quot;,
TEXT(VPM_Status__c)=&quot;Freight Rejected&quot;,
TEXT(VPM_Status__c)=&quot;Bank Data Validation Rejected&quot;
),
NULL,
DATEVALUE(NOW())-DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>